fix content being clipped by the fixed nav bar

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,9 +3,9 @@ nav{
   background-color: #4056A1 ;
   width:100%;
   color:#FFFFFF ;  
-  border: 2px solid brown;
-  position: fixed;
+  position: sticky;
   top: 0;
+
 }
 
 #navID { 
@@ -33,3 +33,4 @@ nav{
   padding-right: 1em;
   font-family:"Source Sans Pro", sans-serif;
 }
+
